--- a/comp-584-server/appsettings.Development.json
+++ b/comp-584-server/appsettings.Development.json
@@ -1,8 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  
+    "ConnectionStrings": {
+      "DefaultConnection": "data source=(localdb)\\mssqllocaldb;initial catalog=comp584Golden"
+    },
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
     }
   }
-}
