--- a/comp-584-server/appsettings.Development.json
+++ b/comp-584-server/appsettings.Development.json
@@ -1,12 +1,16 @@
 {
-  
-    "ConnectionStrings": {
-      "DefaultConnection": "data source=(localdb)\\mssqllocaldb;initial catalog=comp584Golden"
-    },
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft.AspNetCore": "Warning"
-      }
+
+  "ConnectionStrings": {
+    "DefaultConnection": "data source=(localdb)\\mssqllocaldb;initial catalog=comp584Golden"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "DefaultPasswords": {
+    "admin": "Admin@123",
+    "user": "User@123"
   }
+}
