--- a/comp-584-server/appsettings.Development.json
+++ b/comp-584-server/appsettings.Development.json
@@ -12,5 +12,11 @@
   "DefaultPasswords": {
     "admin": "Admin@123",
     "user": "User@123"
+  },
+  "JwtSettings": {
+    "Issuer": "comp-584-server",
+    "Audience": "comp-584-client",
+    "SecretKey": "vgiUGxCbZMJjBteyxmX8FgTsesos3cP5rdehMgjyiH9z",
+    "ExpiryInMinutes": 60
   }
 }
